--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
     "@tanstack/react-query": "^5.71.5",
-    "graphql-request": "^7.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.16",
